[package]
name = "async_http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
tokio-stream = {version = "0.1.8", features = ["net"]}
futures = "0.3"